Thesis: Added Abstract

--- a/report/DOCUMENT/acronyms.tex
+++ b/report/DOCUMENT/acronyms.tex
@@ -2,7 +2,9 @@
 
 \selectlanguage{english}
 \begin{description}
-  \item[BVH] Bounding Volume Hierarchy
   \item[AABB] Axis-Aligned Bounding Box
+  \item[BVH] Bounding Volume Hierarchy
+  \item[CAE] Computer Aided Engineering
+  \item[DFS] Depth First Search
 \end{description}
 \selectlanguage{greek}
