added main.pdf & minor changes

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -8,8 +8,8 @@
 
 \section{Αλγόριθμοι Εξαντλητικής Αναζήτησης}
 
-\section{Σχεδιασμός μιας \tl{BVH} Δομής Δεδομένων, το \tl{sKD-Tree}}
-\subsection{Κατασκευή του \tl{spatial KD-Tree}}
+\section{Σχεδιασμός μιας \tl{BVH} Δομής Δεδομένων, το \tl{spatial KD-Tree}}
+\subsection{Κατασκευή του \tl{sKD-Tree}}
 \subsection{Ερωτήματα Κοντινότερου Γείτονα στο \tl{sKD-Tree}}
 
 
