--- a/report/DOCUMENT/cover.tex
+++ b/report/DOCUMENT/cover.tex
@@ -58,11 +58,11 @@
 υποστηρίζει ερωτήματα κοντινότερου γείτονα για χωρικά δεδομένα.
 Η διάσχιση της δενδρικής δομής σχεδιάζεται ως μια κατευθυνόμενη 
 αναζήτηση κατά βάθος (\tl{DFS}), που στοχεύει στη σμίκρυνση του 
-χώρου αναζήτησης μέσω του κλαδέματος του δένδρου κατά την 
+χώρου αναζήτησης μέσω κλαδέματος του δένδρου κατά την 
 οπισθοδρόμηση. 
 Ακόμη, στην υλοποίηση μας παραλληλοποιούμε τη διαδικασία
 κατασκευής του δένδρου όπως και τη διαδικασία αναζήτησης της ελάχιστης 
-απόστασης, με χρήση πολλαπλών νημάτων. 
+απόστασης κάνοντας χρήση πολλαπλών νημάτων επεξεργασίας. 
 Τέλος, μετράμε και αναλύουμε την επίδοση των αλγορίθμων μας σε μια σειρά
 από περιπτώσεις ελέγχου που κατασκευάσαμε. 
 \end{abstract}
