Added some Related Work sections

--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -1,1 +1,11 @@
 \chapter{Σχετική Βιβλιογραφία}
+
+\section{Εύρεση Κοντινότερου Σημείου σε ένα Σύνολο Σημείων}
+
+\section{Ανίχνευση Σύγκρουσης και Υπολογισμός Απόστασης Πολυγώνων}
+
+\section{Απόσταση Σημείου από Πολυγωνικό Πλέγμα}
+
+\section{Απόσταση Αντικειμένων που Περιγράφονται από \tl{NURBS}}
+
+\section{Απόσταση Δύο Πολυγωνικών Πλεγμάτων}
