--- a/report/DOCUMENT/chapter_future_work.tex
+++ b/report/DOCUMENT/chapter_future_work.tex
@@ -1,4 +1,5 @@
 \chapter{Συμπεράσματα και Μελλοντική Εργασία}
+\label{ch:future_work}
 \section{Σχολιασμός των Αποτελεσμάτων από τα Πειράματα}
 
 \section{Μελλοντική Εργασία}
