--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -1,4 +1,5 @@
 \chapter{Εισαγωγή}
+\label{ch:introduction}
 \section{Κίνητρο}
 
 \section{Περιγραφή του Προβλήματος}
@@ -6,3 +7,30 @@
 \section{Στόχοι της Διπλωματικής Εργασίας}
 
 \section{Διάρθρωση της Διπλωματικής Εργασίας}
+Στο \textbf{Κεφάλαιο \ref{ch:introduction}} έγινε μια εισαγωγή στο 
+πρόβλημα υπολογισμού της απόστασης δύο πλεγμάτων και παρουσιάστηκαν
+τα κίνητρα που οδήγησαν στην υλοποίηση των αλγορίθμων που θα 
+παρουσιαστούν. 
+
+Στο \textbf{Κεφάλαιο \ref{ch:theoretical_background}} παρουσιάζεται το 
+θεωρητικό υπόβαθρο που απαιτείται από τον αναγνώστη ώστε να κατανοήσει
+πλήρως το πρόβλημα και την προτεινόμενη λύση.
+
+Στο \textbf{Κεφάλαιο \ref{ch:related_work}} αναφέρεται η σχετική 
+βιβλιογραφία, δηλαδή πώς αντιμετώπισαν άλλοι ερευνητές το ίδιο ή 
+παρόμοια προβλήματα. 
+Παρουσιάζονται επίσης ομοιότητες και διαφορές
+των υπολοίπων προσεγγίσεων σε σχέση με τη δική μας.
+
+Στο \textbf{Κεφάλαιο \ref{ch:methodology}} αναλύεται η μεθοδολογία 
+που προτείνουμε και παρουσιάζεται η υλοποίηση των αλγορίθμων μας.
+
+Στο \textbf{Κεφάλαιο \ref{ch:experiments}} παρατίθενται τα αποτελέσματα 
+από τα πειράματα που εκτελέσαμε. 
+Οι μετρήσεις των πειραμάτων περιλαμβάνουν την εκτίμηση της συνάρτησης 
+κόστους που ορίζεται στην ενότητα \ref{sec:cost_metric} καθώς και τους χρόνους
+εκτέλεσης των αλγορίθμων. 
+
+Στο \textbf{Κεφάλαιο \ref{ch:future_work}} σχολιάζονται τα αποτελέσματα
+και παρουσιάζονται σκέψεις για μελλοντική επέκταση και βελτίωση των 
+ιδεών της παρούσας διπλωματικής εργασίας.
