--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -1,17 +1,20 @@
 \chapter{Μεθοδολογία}
+\label{ch:methodology}
 
-\section{Υπολογισμοί Ευκλείδειας Απόστασης Στοιχειωδών Γεωμετρικών Αντικειμένων}
+\section{Υπολογισμοί Απόστασης Στοιχειωδών Γεωμετρικών Αντικειμένων}
 \subsection{Ευκλείδεια Απόσταση δύο Τριγώνων}
 \subsubsection{Ευκλείδεια Απόσταση δύο Ευθυγράμμων Τμημάτων}
 \subsubsection{Ευκλείδεια Απόσταση Σημείου και Τριγώνου}
-\subsection{Ευκλείδεια Απόσταση δύο Οριοθετικών Πλαισίων Ευθυγραμμισμένων με τους Άξονες}
+\subsection{Ευκλείδεια Απόσταση δύο \tl{AABB}}
 
 \section{Αλγόριθμοι Εξαντλητικής Αναζήτησης}
+
+\section{Ορισμός Μετρικής Κόστους Αναζήτησης}
+\label{sec:cost_metric}
 
 \section{Σχεδιασμός μιας \tl{BVH} Δομής Δεδομένων, το \tl{spatial KD-Tree}}
 \subsection{Κατασκευή του \tl{sKD-Tree}}
 \subsection{Ερωτήματα Κοντινότερου Γείτονα στο \tl{sKD-Tree}}
-
 
 \section{Αλγόριθμοι που χρησιμοποιούν τη δομή \tl{sKD-Tree}}
 
