--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -1,6 +1,48 @@
 \chapter{Εισαγωγή}
 \label{ch:introduction}
 \section{Κίνητρο}
+Ο υπολογισμός της απόστασης που διαχωρίζει δύο αντικείμενα στο 
+χώρο αποτελεί θεμελιώδες πρόβλημα στον τομέα της Υπολογιστικής
+Γεωμετρίας.
+Στη ρομποτική, στη σχεδίαση και μηχανική με τη βοήθεια υπολογιστών 
+(\tl{CAD} και \tl{CAE}), στις προσομοιώσεις με υπολογιστές και στη γραφική 
+υπολογιστών είναι σημαντικό να γνωρίζουμε εάν δύο αντικείμενα, που περιγράφονται 
+από μαθηματικά μοντέλα στον τρισδιάστατο χώρο, τέμνονται/συγκρούονται ή βρίσκονται 
+σε κοντινή απόσταση.
+Για την παρούσα διπλωματική εργασία, εξετάζουμε την περίπτωση όπου τα αντικείμενα
+του χώρου περιγράφονται από τριγωνικά πλέγματα (βλ. \ref{sec:triangle_meshes}). 
+
+Στη ρομποτική, για παράδειγμα, η επίλυση του παραπάνω προβλήματος 
+είναι απαιτητή για τον σχεδιασμό διαδρομής με την παρουσία εμποδίων
+\tl{(path-planning problem)}
+\cite{brooks1985subdivision},
+\cite{cameron1985study}, 
+\cite{canny1986collision}, 
+\cite{culley1986collision}.
+Επιπλέον, σε εφαρμογές \tl{CAD-CAE} στις οποίες σχεδιάζονται περίπλοκες 
+κατασκευές που αποτελούνται από μεγάλο αριθμό εξαρτημάτων, ο εντοπισμός 
+σύγκρουσης μεταξύ των εξαρτημάτων είναι απαραίτητος τόσο για τις αναλύσεις 
+και δοκιμές των προϊόντων όσο και για την παραγωγή τους 
+\cite{boyse1979interference}. 
+Στη γραφική με υπολογιστές και συγκεκριμένα κατά την κίνηση των 
+αντικειμένων σε μια εικονική σκηνή, όπως στα βιντεοπαιχνίδια και 
+στα κινούμενα σχέδια, είναι πιθανό τα αντικείμενα να διεισδύσουν το 
+ένα στο άλλο. Αυτή η κατάσταση δεν είναι επιθυμητή όταν με τα 
+γραφικά επιδιώκεται η αναπαράσταση ενός ρεαλιστικού κόσμου
+\cite{moore1988collision}.
+Τέλος, το πρόβλημα υπολογισμού της απόστασης που διαχωρίζει δύο αντικείμενα 
+στο χώρο συναντάται και στον τομέα της υπολογιστικής φυσικής για εφαρμογές 
+ανάλυσης πεπερασμένων στοιχείων (\tl{FEA}) και προσομοιώσεων 
+\cite{khamayseh2007use}.
+
+Η ραγδαία ανάπτυξη όλων των παραπάνω τομέων τα τελευταία χρόνια
+και η απαίτηση λεπτομερέστερης περιγραφής των αντικειμένων του
+τρισδιάστατου χώρου, κάνουν επιτακτική την ανάγκη για μελέτη
+και σχεδιασμό αποδοτικών αλγορίθμων που μπορούν να διαχειριστούν
+μεγάλους όγκους δεδομένων εισόδου. Σε αυτή τη διπλωματική εργασία
+προτείνουμε αποδοτικούς αλγορίθμους για τον υπολογισμό της απόστασης 
+δύο τριγωνικών πλεγμάτων στον τρισδιάστατο χώρο.
+
 
 \section{Περιγραφή του Προβλήματος}
 
@@ -27,7 +69,7 @@
 
 Στο \textbf{Κεφάλαιο \ref{ch:experiments}} παρατίθενται τα αποτελέσματα 
 από τα πειράματα που εκτελέσαμε. 
-Οι μετρήσεις των πειραμάτων περιλαμβάνουν την εκτίμηση της συνάρτησης 
+Οι μετρήσεις των πειραμάτων περιλαμβάνουν την εκτίμηση της μετρικής 
 κόστους που ορίζεται στην ενότητα \ref{sec:cost_metric} καθώς και τους χρόνους
 εκτέλεσης των αλγορίθμων. 
 
