--- a/report/DOCUMENT/chapter_theoretical_background.tex
+++ b/report/DOCUMENT/chapter_theoretical_background.tex
@@ -2,6 +2,7 @@
 \label{ch:theoretical_background}
 
 \section{Τριγωνικά Πλέγματα}
+\label{sec:triangle_meshes}
 
 \section{Οριοθετικοί Όγκοι}
 \subsection{Οριοθετικά Πλαίσια Ευθυγραμμισμένα με τους Άξονες}
