--- a/report/DOCUMENT/cover.tex
+++ b/report/DOCUMENT/cover.tex
@@ -65,6 +65,10 @@
 απόστασης κάνοντας χρήση πολλαπλών νημάτων επεξεργασίας. 
 Τέλος, μετράμε και αναλύουμε την επίδοση των αλγορίθμων μας σε μια σειρά
 από περιπτώσεις ελέγχου που κατασκευάσαμε. 
+
+\textbf{Λέξεις-κλειδιά:} \\
+\textit{Υπολογιστική Γεωμετρία, Πολυγωνικά Πλέγματα, Ευκλείδεια Απόσταση,
+Ιεραρχίες Οριοθετικών Όγκων}
 \end{abstract}
 
 \selectlanguage{english}
@@ -95,6 +99,10 @@ structure as well as the procedure of finding the Euclidean
 distance, using multithreading.
 Finally, we measure and analyze the efficiency of our 
 algorithms on a series of test cases we created.
+
+\textbf{Keywords:} \\
+\textit{Computational Geometry, Polygonal Meshes, Euclidean Distance,
+Bounding Volumes Hierarchies}
 
 \end{abstract}
 
