Wrote Motive & Problem Description

--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -38,13 +38,52 @@
 Η ραγδαία ανάπτυξη όλων των παραπάνω τομέων τα τελευταία χρόνια
 και η απαίτηση λεπτομερέστερης περιγραφής των αντικειμένων του
 τρισδιάστατου χώρου, κάνουν επιτακτική την ανάγκη για μελέτη
-και σχεδιασμό αποδοτικών αλγορίθμων που μπορούν να διαχειριστούν
+και σχεδιασμό αλγορίθμων ικανών να διαχειριστούν
 μεγάλους όγκους δεδομένων εισόδου. Σε αυτή τη διπλωματική εργασία
 προτείνουμε αποδοτικούς αλγορίθμους για τον υπολογισμό της απόστασης 
-δύο τριγωνικών πλεγμάτων στον τρισδιάστατο χώρο.
-
+δύο πλεγμάτων στον τρισδιάστατο χώρο.
 
 \section{Περιγραφή του Προβλήματος}
+Δοθέντων δύο αντικειμένων στον χώρο, τα οποία περιγράφονται από 
+τριγωνικά πλέγματα, το πιο φυσικό μέγεθος για την περιγραφή της 
+εγγύτητας μεταξύ τους είναι η Ευκλείδεια απόσταση. 
+Δηλαδή, το μήκος του μικρότερου ευθυγράμμου τμήματος που ενώνει 
+τα δύο αντικείμενα. Σε περίπτωση που τα αντικείμενα συγκρούονται 
+η απόσταση τους είναι μηδέν.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{problem_visualisation.png}
+    \caption[Οπτική Αναπαράσταση του Προβλήματος]{
+        Ευκλείδεια Απόσταση δύο Τριγωνικών Πλεγμάτων - 
+        Το κόκκινο ευθύγραμμο τμήμα αναπαριστά την Ευκλείδεια
+        απόσταση ενός Τόρου και του \tl{Stanford Bunny}.  
+    }
+\end{figure}
+
+Με τον ίδιο ακριβώς τρόπο ορίζεται και η Ευκλείδεια απόσταση 
+μεταξύ δύο τριγώνων στον τρισδιάστατο χώρο. 
+Σχεδιάζοντας μια τέτοια ρουτίνα (βλ. \ref{subsec:tria_distance}) 
+τότε μπορούμε να δώσουμε έναν εναλλακτικό ορισμό του προβλήματος
+και ταυτόχρονα έναν αλγόριθμο που το επιλύει: 
+
+\begin{definition}
+    Έστω δύο αντικείμενα του τρισδιάστατου χώρου που περιγράφονται 
+    από τριγωνικά πλέγματα. Επιπλέον, έστω τα σύνολα $X$, $Y$ που 
+    αποτελούνται από τα τρίγωνα των δύο πλεγμάτων, αντίστοιχα, και 
+    $tria\_dist(x,y)$ η ρουτίνα που υπολογίζει την Ευκλείδεια απόσταση
+    δύο τριγώνων $x$, $y$.
+    Η Ευκλείδεια απόσταση $d$ των δύο τριγωνικών πλεγμάτων είναι
+    \[ d = \min_{\forall x \in X, \forall y \in Y} tria\_dist(x,y) \]    
+\end{definition}
+
+Ο τετριμμένος αλγόριθμος, που βασίζεται στον ορισμό, υπολογίζει την απόσταση 
+κάθε πιθανού ζεύγους τριγώνων και επιλέγει την ελάχιστη. Τέτοιοι αλγόριθμοι 
+εξαντλητικής αναζήτησης περιγράφονται στο \ref{sec:exhaustive_search}, όμως
+είναι αδύνατο να χρησιμοποιηθούν σε πραγματικές εφαρμογές λόγω της μεγάλης 
+υπολογιστικής τους πολυπλοκότητας της τάξης $\bigO(N \cdot M)$ (όπου $N$, $M$ το 
+πλήθος των τριγώνων των συνόλων $X$, $Y$ αντίστοιχα).
+
 
 \section{Στόχοι της Διπλωματικής Εργασίας}
 
