--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -3,11 +3,13 @@
 
 \section{Υπολογισμοί Απόστασης Στοιχειωδών Γεωμετρικών Αντικειμένων}
 \subsection{Ευκλείδεια Απόσταση δύο Τριγώνων}
+\label{subsec:tria_distance}
 \subsubsection{Ευκλείδεια Απόσταση δύο Ευθυγράμμων Τμημάτων}
 \subsubsection{Ευκλείδεια Απόσταση Σημείου και Τριγώνου}
 \subsection{Ευκλείδεια Απόσταση δύο \tl{AABB}}
 
 \section{Αλγόριθμοι Εξαντλητικής Αναζήτησης}
+\label{sec:exhaustive_search}
 
 \section{Ορισμός Μετρικής Κόστους Αναζήτησης}
 \label{sec:cost_metric}
