--- a/report/DOCUMENT/chapter_theoretical_background.tex
+++ b/report/DOCUMENT/chapter_theoretical_background.tex
@@ -4,9 +4,10 @@
 \section{Τριγωνικά Πλέγματα}
 \label{sec:triangle_meshes}
 
+\section{Ευρετήρια για Χωρικά Δεδομένα \tl{Spatial Indexing}}
+
 \section{Οριοθετικοί Όγκοι}
 \subsection{Οριοθετικά Πλαίσια Ευθυγραμμισμένα με τους Άξονες}
-
 
 \section{Ιεραρχίες Οριοθετικών Όγκων}
 
