--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -20,6 +20,10 @@
 \def\tl{\textlatin}
 \def\tg{\textgreek}
 
+\newtheorem{definition}{Ορισμός}
+
+\def\bigO{\mathcal{O}}
+
 \begin{document}
 
 \include{cover}
