Wrote Contribution of Thesis

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -5,7 +5,7 @@
 
 \section{Κατασκευή Δεδομένων Ελέγχου}
 
-\section{Εκτίμηση της Συνάρτησης Κόστους Αναζήτησης}
+\section{Εκτίμηση της Μετρικής Κόστους Αναζήτησης}
 
 \section{Χρόνοι Κατασκευής του \tl{sKD-Tree}}
 \subsection{Σειριακή Κατασκευή}
