--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -80,12 +80,34 @@
 Ο τετριμμένος αλγόριθμος, που βασίζεται στον ορισμό, υπολογίζει την απόσταση 
 κάθε πιθανού ζεύγους τριγώνων και επιλέγει την ελάχιστη. Τέτοιοι αλγόριθμοι 
 εξαντλητικής αναζήτησης περιγράφονται στο \ref{sec:exhaustive_search}, όμως
-είναι αδύνατο να χρησιμοποιηθούν σε πραγματικές εφαρμογές λόγω της μεγάλης 
-υπολογιστικής τους πολυπλοκότητας της τάξης $\bigO(N \cdot M)$ (όπου $N$, $M$ το 
+είναι αδύνατο να χρησιμοποιηθούν σε πραγματικές εφαρμογές. O λόγος είναι η μεγάλη
+υπολογιστική τους πολυπλοκότητα της τάξης $\bigO(N \cdot M)$ (όπου $N$, $M$ το 
 πλήθος των τριγώνων των συνόλων $X$, $Y$ αντίστοιχα).
 
-
 \section{Στόχοι της Διπλωματικής Εργασίας}
+Η συνεισφορά της διπλωματικής εργασίας είναι η ακόλουθη:
+\begin{itemize}
+    \item Σχεδιάζουμε μια δενδρική δομή δεδομένων που ανήκει στην 
+    οικογένεια των Ιεραρχιών Οριοθετικών Όγκων (\tl{BVH}). Η δομή 
+    αυτή χρησιμοποιείται ως χωρικό ευρετήριο (\tl{spatial indexing}).
+    \item Προτείνουμε έναν τρόπο διάσχισης της παραπάνω δομής ώστε 
+    να υποστηρίζονται ερωτήματα κοντινότερου γείτονα για χωρικά 
+    δεδομένα. Στόχος είναι να ελεγχθεί μόνο ένα μικρό υποσύνολο του 
+    χώρου αναζήτησης. Αυτό επιτυγχάνεται με το κλάδεμα (\tl{pruning})
+    του δένδρου κατά την αναζήτηση.
+    \item Προτείνουμε δύο αλγορίθμους που επιλύουν το πρόβλημα 
+    υπολογισμού της Ευκλείδειας απόστασης δύο πλεγμάτων. 
+    Οι αλγόριθμοι είναι γενικοί και μπορούν να εφαρμοστούν σε 
+    πλέγματα που αποτελούνται από διαφόρων ειδών πολύτοπα (ν-γωνα και 
+    πολύεδρα) υπό προϋποθέσεις. Στην εργασία αυτή μελετώνται τα 
+    τριγωνικά πλέγματα.
+    \item Υλοποιούμε τους αλγορίθμους για συστήματα υψηλής απόδοσης 
+    που υποστηρίζουν πολλαπλά νήματα (\tl{multithreading}). 
+    Παραλληλοποιούμε τις διαδικασίες κατασκευής του δένδρου και
+    αναζήτησης της ελάχιστης απόστασης.
+    \item Μετράμε και αναλύουμε την επίδοση των αλγορίθμων μας 
+    σε μια σειρά από περιπτώσεις ελέγχου που κατασκευάσαμε. 
+\end{itemize}
 
 \section{Διάρθρωση της Διπλωματικής Εργασίας}
 Στο \textbf{Κεφάλαιο \ref{ch:introduction}} έγινε μια εισαγωγή στο 
