Wrote about Meshes

--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -98,7 +98,7 @@
     \item Προτείνουμε δύο αλγορίθμους που επιλύουν το πρόβλημα 
     υπολογισμού της Ευκλείδειας απόστασης δύο πλεγμάτων. 
     Οι αλγόριθμοι είναι γενικοί και μπορούν να εφαρμοστούν σε 
-    πλέγματα που αποτελούνται από διαφόρων ειδών πολύτοπα (ν-γωνα και 
+    πλέγματα που αποτελούνται από διαφόρων ειδών πολύτοπα (πολύγωνα και 
     πολύεδρα) υπό προϋποθέσεις. Στην εργασία αυτή μελετώνται τα 
     τριγωνικά πλέγματα.
     \item Υλοποιούμε τους αλγορίθμους για συστήματα υψηλής απόδοσης 
