--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -9,6 +9,7 @@
 \usepackage{bookmark}
 \usepackage{cite}
 \usepackage{graphicx}
+\usepackage{wrapfig}
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{siunitx}
