--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -112,3 +112,24 @@
   year={1988}
 }
 
+@inproceedings{yianilos1993data,
+  title={Data structures and algorithms for nearest neighbor},
+  author={Yianilos, Peter N},
+  booktitle={Proceedings of the fourth annual ACM-SIAM Symposium on Discrete algorithms},
+  volume={66},
+  pages={311},
+  year={1993},
+  organization={SIAM}
+}
+
+@article{friedman1975algorithm,
+  title={An algorithm for finding nearest neighbors},
+  author={Friedman, Jerome H and Baskett, Forest and Shustek, Leonard J},
+  journal={IEEE Transactions on computers},
+  volume={100},
+  number={10},
+  pages={1000--1006},
+  year={1975},
+  publisher={IEEE}
+}
+
