Wrote about Bounding Volumes

--- a/report/DOCUMENT/acronyms.tex
+++ b/report/DOCUMENT/acronyms.tex
@@ -7,5 +7,7 @@
   \item[CAE] Computer Aided Engineering
   \item[DFS] Depth First Search
   \item[FEA] Finite Element Analysis
+  \item[MBR] Minimum Bounding Rectangle
+  \item[OBB] Oriented Bounding Box
 \end{description}
 \selectlanguage{greek}
